# auto_eq

./: .gitignore  CMakeLists.txt
cmake/: get_cpm.cmake
plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: AudioBufferFifo.cpp  AudioBufferFifo.h  BandParameterUpdater.cpp  BandParameterUpdater.h  BandUpdater.cpp  BandUpdater.h  CutBand.h  EqParams.cpp  EqParams.h  Equalizer.cpp  Equalizer.h  FilterFactory.cpp  FilterFactory.h  InputAnalysisFft.cpp  InputAnalysisFft.h  InputAnalysisFilter.cpp  InputAnalysisFilter.h  MonoFftBuffer.cpp  MonoFftBuffer.h  MonoSpectrogram.cpp  MonoSpectrogram.h  PeakBand.h  ShelfBand.h  Spectrogram.cpp  Spectrogram.h  UnityGainCalculator.cpp  UnityGainCalculator.h
source/gui/: CustomLookAndFeel.cpp  DecibelMarkers.cpp  DecibelMarkers.h  FrequencyMarkers.cpp  FrequencyMarkers.h  IntensityControl.cpp  IntensityControl.h  MonoSpectrogram.h  Theme.cpp  Theme.h  ThemeButton.cpp  ThemeButton.h
source/gui/analyser/: Analyser.cpp  Analyser.h  AnalyserCanvas.cpp  AnalyserCanvas.h  DecibelMarkers.cpp  DecibelMarkers.h  FilterResponseCurve.cpp  FilterResponseCurve.h  FilterResponseGraph.h  FrequencyMarkers.cpp  FrequencyMarkers.h  MonoFftPath.cpp  MonoFftPath.h  MonoSpectrogramPath.cpp  MonoSpectrogramPath.h  PrimaryAnalyser.cpp  PrimaryAnalyser.h  SidechainAnalyser.cpp  SidechainAnalyser.h
source/gui/eq_intensity/: EqIntensity.cpp  EqIntensity.h
source/gui/fft_menu/: FftMenu.cpp  FftMenu.h  FftMenuButton.cpp  FftMenuButton.h  FftMenuLabel.cpp  FftMenuLabel.h
source/gui/gain_control/: UnityGainWidget.cpp  UnityGainWidget.h
source/gui/input_analysis_menu/: InputAnalysisMenu.cpp  InputAnalysisMenu.h
source/gui/input_trim/: InputTrim.cpp  InputTrim.h
source/gui/intensity_control/: IntensityControl.cpp  IntensityControl.h  IntensityLabel.cpp  IntensityLabel.h
source/gui/limiter/: LimiterWidget.cpp  LimiterWidget.h
source/gui/look_and_feel/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  Theme.cpp  Theme.h
source/gui/lufs_meters/: LufsLabelGroup.h  LufsMeterGroup.cpp  LufsMeterGroup.h  LufsMetersWidget.cpp  LufsMetersWidget.h
source/gui/master_gain/: MasterGain.cpp  MasterGain.h
source/gui/menu/: Menu.cpp  Menu.h  ThemeButton.cpp  ThemeButton.h
source/gui/meters/: LufsLabelGroup.cpp  LufsMetersWidget.cpp  LufsMetersWidget.h  MeterCanvas.cpp  MeterCanvas.h  MeterDbScale.cpp  MeterDbScale.h  MeterGroup.cpp  MeterGroup.h  MeterLabel.cpp  MeterLabel.h  MeterLabelGroup.cpp  MeterLabelGroup.h  MetersWidget.cpp  MetersWidget.h  MonoMeter.cpp  MonoMeter.h  ResetButton.cpp  ResetButton.h  StereoMeter.cpp  StereoMeter.h
source/gui/mode_selector/: ModeSelector.cpp  ModeSelector.h
source/gui/profiling/: MonoWaveform.cpp  MonoWaveform.h  ProfileButtonGroup.cpp  ProfileButtonGroup.h  ProfilerInputMeter.cpp  ProfilerInputMeter.h  ProfilerInputWidget.cpp  ProfilerInputWidget.h  ProfilerWidget.cpp  ProfilerWidget.h
source/gui/response_graph/: DecibelMarkers.cpp  DecibelMarkers.h  EqBandSlider.cpp  EqBandSlider.h  FilterMagnitudesCalculator.cpp  FilterMagnitudesCalculator.h  FilterResponseBands.cpp  FilterResponseBands.h  FilterResponseCanvas.cpp  FilterResponseCanvas.h  FilterResponseCurve.cpp  FilterResponseCurve.h  FilterResponseGraph.cpp  FilterResponseGraph.h  FrequencyMarkers.cpp  FrequencyMarkers.h  MonoFftPath.cpp  MonoFftPath.h  MonoFftPathProducer.cpp  MonoFftPathProducer.h
source/gui/save_dialog/: SaveAsDialog.cpp  SaveAsDialog.h  SaveChangesDialog.cpp  SaveChangesDialog.h  SaveDialogBase.cpp  SaveDialogBase.h  WarningLabel.cpp  WarningLabel.h
source/gui/theme_button/: ThemeButton.cpp
source/gui/toolbar/: ButtonToolbar.cpp  ButtonToolbar.h  PluginEnablementButton.cpp  PluginEnablementButton.h  PresetNameLabel.cpp  PresetNameLabel.h  ReadonlyTextBox.cpp  ReadonlyTextBox.h  ThemeButton.cpp  ThemeButton.h  ToolbarSeparator.cpp  ToolbarSeparator.h
source/gui/transport/: TransportButton.cpp  TransportButton.h  TransportGroup.cpp  TransportGroup.h
source/gui/widgets/: AnalysisStateButton.cpp  AnalysisStateButton.h  ButtonWithLabel.cpp  ButtonWithLabel.h  CustomTextButton.cpp  CustomTextButton.h  CustomTextEntryBox.cpp  CustomTextEntryBox.h  CustomTextToggleButton.cpp  CustomTextToggleButton.h  DisableableLabel.cpp  DisableableLabel.h  MenuButton.cpp  MenuButton.h  PowerButton.cpp  PowerButton.h  RecordButton.cpp  RecordButton.h  RotaryControl.cpp  RotaryControl.h  SpectrumVisibilityButton.cpp  SpectrumVisibilityButton.h  SpinBox.cpp  SpinBox.h  SquareToggleButton.cpp  SquareToggleButton.h  ThemeButton.cpp  ToggleSwitch.cpp  ToggleSwitch.h
source/gui/widgets/spinbox/: SpinBox.cpp  SpinBox.h  SpinBoxButton.cpp  SpinBoxButton.h  SpinBoxTextBox.cpp  SpinBoxTextBox.h
source/preset_management/: EqProfile.cpp  EqProfile.h  PresetManager.cpp  PresetManager.h  PresetMenu.cpp  PresetMenu.h
source/utility/: GlobalConstants.h
